--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,13 @@
 	background-size: cover;
 	margin: 0;
 }
+.navbar-nav>li>a {
+	padding: 15px 5em 15px 0;
+}
+
+.btn-primary {
+	margin-top: .6em;
+}
 .container {
     padding-top: 5em;
     width: 62%;
@@ -82,7 +89,9 @@
 	text-decoration: underline;
 	font-size: 1em;
 }
-
+@media (min-width: 768px) {
+	.jumbotron 
+}
 
 
 
